update api-realtime
